--- a/shiny_app/What_Happened.Rmd
+++ b/shiny_app/What_Happened.Rmd
@@ -1,45 +1,81 @@
 ---
-title: "What Happened?"
-output: html_document
+title: "What Happened?" 
+output: html_document     
+table_of_contents: TRUE
 runtime: shiny
+
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE)
 ```
 
 
-#Here we can do an interactive graphic
-this isn't too bad, probably took me an hour to pull this together
-##here is a smaller header before the graph
+#K Nearest Neighbors
+What is particularly interesting about the K-Nearest Neighbors Regression approach is that we can evaluate *what kinds* of similarities are most predictive of how counties vote. We have found that household income, home value, and age are among the most predictive.  
 
-```{r Display_KNN, echo=FALSE}
-source('scripts/KNN.R')
-   
+K-Nearest Neighbors also penalizes dimensionality "automatically." As we include more and more features, the distance function become less reliable for reasons both technical and substantive. Technically, distance metrics become less use in high dimensional space, as all points converge towards being [arbitrarily far](https://en.wikipedia.org/wiki/Curse_of_dimensionality#Distance_functions) from each other. 
+
+This is not just an abstract mathematical result. As we add less informative features, the clustering algorithm will treat observations that are similar in terms of the less informative feature the same as it treats the observerations that are meaningfully similar. That is, if we add uninformative features, we end up including "bad comparisons" along with our "good comparisons." Additionally, as we increase the number of neighbors, we similarly risk including "bad comparisons," as we add more and more observations that are less similar.  
+
+
+
+With this interactive widget, you can try to find the best attributes. Watch as the prediction  gets *worse* if you add uninformative attributes, or if you add too many neighbors! 
+
+## K Nearest Neighbors: What Kinds of Similarities Are Most Predictive?
+
+```{r Display_KNN_Model, eval=FALSE, include=FALSE}
+suppressWarnings(source('scripts/KNN.R'))
+   #main_data <- get_election_data()
    # Application title
-   titlePanel("K Nearest Neighbors")
    
    # Sidebar with a slider input for number of bins 
    inputPanel(
      selectInput("features",
                      "Select Features",
-                      choices = c('naturalized', 'non_citizen', 'female', 'foodstamp',
-                  'age', 'white', 'black', 'asian_pac_islander', 'multi_racial',
-                  'indig', 'hispanic', 'married', 'single', 'foreign_born',
-                  'student', 'veteran', 'moved_last_year', 'col_degree',
-                  'less_than_hs', 'grad', 'indig_land', 'farm',
-                  'med_hhinc', 'med_age', 'med_hh_val'),
-                     selected = 'med_age', multiple = TRUE),
+                      choices = feature_names,
+                     selected = 'College Degree', multiple = TRUE),
      sliderInput('K',"Number of Neighbors",
                  min = 5, max = 100, value = 20, step = 1)
       )
     
 
 renderPlot(
-    display_KNN(input$K,input$features,1003), width = "auto", height = 850
+    display_KNN(input$K,input$features), width = "auto", height = 450
    )
 
+```
+## What Are the Most Similar Counties?
+
+We can take an even closer look to see which *exact counties* are being used as the comparison group in the best performing models.
+
+```{r one_county_neighbors, eval=FALSE, include=FALSE}
+  source('scripts/KNN.R')
+  counties <- 'Please Select a State'
+   #main_data <- get_election_data()
+   # Application title
+   
+   # Sidebar with a slider input for number of bins 
+   renderUI(
+   inputPanel(
+     selectInput("state",
+                     "Select State",
+                      choices = state_names,
+                     multiple = FALSE),
+   ))
+
+renderPlot(
+   )
 
 ```
 
+```{r one_county_take_two, echo=TRUE}
+  source('scripts/KNN.R')
+
+shinyAppDir(appDir =  "reactive_KNN_graph",
+  options = list(
+    width = "100%", height = 550
+  )
+)
+```
 
